Fix final core logic backend build