@@ -1,119 +1,98 @@
 package com.team.backend.service.impl;
 
-import com.team.backend.entity.Auction;
-import com.team.backend.entity.AuctionState;
-import com.team.backend.entity.BidTransaction;
-<<<<<<< Updated upstream
-import com.team.backend.repository.AuctionRepository;
-import com.team.backend.repository.AutoBidRepository;
-import com.team.backend.repository.BidRepository;
-import com.team.backend.exception.InvalidBidException;
-import com.team.backend.exception.ResourceNotFoundException;
-=======
-import com.team.backend.exception.InvalidBidException;
-import com.team.backend.exception.ResourceNotFoundException;
-import com.team.backend.repository.AuctionRepository;
-import com.team.backend.repository.BidRepository;
-import com.team.backend.repository.AutoBidRepository;
-import com.team.backend.service.EventPublisher;
->>>>>>> Stashed changes
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.junit.jupiter.MockitoExtension;
-<<<<<<< Updated upstream
-
-import java.time.Instant;
 import java.util.ArrayList;
-=======
-import org.springframework.dao.PessimisticLockingFailureException;
-
-import java.time.Instant;
-import java.util.ArrayList;
-import java.util.Collections;
->>>>>>> Stashed changes
 import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 
+import com.team.backend.entity.Auction;
+import com.team.backend.entity.AuctionState;
+import com.team.backend.entity.BidTransaction;
+import com.team.backend.exception.InvalidBidException;
+import com.team.backend.exception.ResourceNotFoundException;
+import com.team.backend.repository.AuctionRepository;
+import com.team.backend.repository.BidRepository;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.junit.jupiter.MockitoExtension;
+
+import java.time.Instant;
+import java.util.Optional;
+import java.util.UUID;
+
+import com.team.backend.service.EventPublisher;
+
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
+import com.team.backend.repository.AutoBidRepository;
+
 /**
- * Unit tests for BidServiceImpl adapted to the refactored design where
- * transactional core is in BidTransactionalService.
+ * Unit tests for BidServiceImpl (basic scenarios).
  */
 @ExtendWith(MockitoExtension.class)
 class BidServiceImplTest {
 
     private AuctionRepository auctionRepository;
     private BidRepository bidRepository;
+    private BidServiceImpl bidService;
     private AutoBidRepository autoBidRepository;
     private BidTransactionalService bidTransactionalService;
-<<<<<<< Updated upstream
-=======
     private EventPublisher eventPublisher;
->>>>>>> Stashed changes
-    private BidServiceImpl bidService;
+
 
     @BeforeEach
     void setUp() {
         auctionRepository = mock(AuctionRepository.class);
         bidRepository = mock(BidRepository.class);
         autoBidRepository = mock(AutoBidRepository.class);
-<<<<<<< Updated upstream
-
-        // Create a real transactional service instance but with mocked repositories.
-        bidTransactionalService = new BidTransactionalService(auctionRepository, bidRepository, autoBidRepository);
-
-        double minIncrement = 1.0;
-        long antiSnipingThreshold = 30L;
-        long antiSnipingExtend = 60L;
-        int maxRetries = 3;
-
-        // EventPublisher is optional; pass null for tests
-=======
         eventPublisher = mock(EventPublisher.class);
 
-        // Mock transactional service so that BidServiceImpl falls back to in-memory path
-        bidTransactionalService = mock(BidTransactionalService.class);
-        try {
-            when(bidTransactionalService.placeBidTransactionalAttempt(
-                    any(UUID.class),
-                    any(UUID.class),
-                    anyDouble(),
-                    anyDouble(),
-                    anyLong(),
-                    anyLong(),
-                    any(EventPublisher.class)
-            )).thenThrow(new PessimisticLockingFailureException("force fallback for tests"));
-        } catch (Exception e) {
-            // won't happen for mock setup
-        }
+        BidTransactionalService realTransactionalService = new BidTransactionalService(
+                auctionRepository,
+                bidRepository,
+                autoBidRepository
+        );
 
->>>>>>> Stashed changes
+        Object transactionalLock = new Object();
+        bidTransactionalService = mock(BidTransactionalService.class);
+        when(bidTransactionalService.placeBidTransactionalAttempt(
+                any(UUID.class),
+                any(UUID.class),
+                anyDouble(),
+                anyDouble(),
+                anyLong(),
+                anyLong(),
+                any()
+        )).thenAnswer(invocation -> {
+            synchronized (transactionalLock) {
+                return realTransactionalService.placeBidTransactionalAttempt(
+                        invocation.getArgument(0, UUID.class),
+                        invocation.getArgument(1, UUID.class),
+                        invocation.getArgument(2, Double.class),
+                        invocation.getArgument(3, Double.class),
+                        invocation.getArgument(4, Long.class),
+                        invocation.getArgument(5, Long.class),
+                        invocation.getArgument(6, EventPublisher.class)
+                );
+            }
+        });
+
+        double minIncrement = 1.0;
         bidService = new BidServiceImpl(
                 auctionRepository,
                 bidRepository,
                 autoBidRepository,
                 bidTransactionalService,
-<<<<<<< Updated upstream
                 minIncrement,
-                antiSnipingThreshold,
-                antiSnipingExtend,
-                maxRetries,
-                null
-=======
-                1.0,         // minIncrement
-                30L,         // antiSnipingThresholdSeconds
-                60L,         // antiSnipingExtendSeconds
-                3,           // maxRetries
-                eventPublisher
->>>>>>> Stashed changes
+                30,
+                60,
+                3,
+                Optional.of(eventPublisher)
         );
     }
 
@@ -129,19 +108,16 @@ class BidServiceImplTest {
         a.setState(AuctionState.ACTIVE);
         a.setCurrentPrice(10.0);
 
-        when(auctionRepository.findById(auctionId)).thenReturn(Optional.of(a));
+        when(auctionRepository.findByIdForUpdate(auctionId)).thenReturn(Optional.of(a));
         when(auctionRepository.save(any(Auction.class))).thenAnswer(i -> i.getArgument(0));
         when(bidRepository.save(any(BidTransaction.class))).thenAnswer(i -> i.getArgument(0));
-<<<<<<< Updated upstream
-=======
         when(autoBidRepository.findByAuctionIdAndActiveTrueOrderByMaxAmountDescCreatedAtAsc(auctionId))
-                .thenReturn(Collections.emptyList());
->>>>>>> Stashed changes
+                .thenReturn(List.of());
 
         BidTransaction tx = bidService.placeBid(auctionId, bidderId, 12.0);
 
         assertNotNull(tx);
-        assertEquals(12.0, tx.getAmount(), 0.0001);
+        assertEquals(12.0, tx.getAmount());
         verify(auctionRepository).save(any(Auction.class));
         verify(bidRepository).save(any(BidTransaction.class));
     }
@@ -158,7 +134,7 @@ class BidServiceImplTest {
         a.setState(AuctionState.ACTIVE);
         a.setCurrentPrice(100.0);
 
-        when(auctionRepository.findById(auctionId)).thenReturn(Optional.of(a));
+        when(auctionRepository.findByIdForUpdate(auctionId)).thenReturn(Optional.of(a));
 
         assertThrows(InvalidBidException.class, () -> bidService.placeBid(auctionId, bidderId, 100.5));
         verify(bidRepository, never()).save(any());
@@ -169,12 +145,11 @@ class BidServiceImplTest {
         UUID auctionId = UUID.randomUUID();
         UUID bidderId = UUID.randomUUID();
 
-        when(auctionRepository.findById(auctionId)).thenReturn(Optional.empty());
+        when(auctionRepository.findByIdForUpdate(auctionId)).thenReturn(Optional.empty());
 
         assertThrows(ResourceNotFoundException.class, () -> bidService.placeBid(auctionId, bidderId, 50.0));
         verify(bidRepository, never()).save(any());
     }
-
     @Test
     void placeBid_concurrentBids_highestBidWins() throws Exception {
         UUID auctionId = UUID.randomUUID();
@@ -188,103 +163,56 @@ class BidServiceImplTest {
 
         Object auctionMonitor = new Object();
 
-<<<<<<< Updated upstream
-        // Simulate repository returning the same auction instance; synchronize to emulate DB serialization
         when(auctionRepository.findByIdForUpdate(auctionId)).thenAnswer(invocation -> {
-=======
-        when(auctionRepository.findById(auctionId)).thenAnswer(invocation -> {
->>>>>>> Stashed changes
             synchronized (auctionMonitor) {
-                // return the same auction instance to allow concurrent threads to update it
                 return Optional.of(auction);
             }
         });
 
         when(auctionRepository.save(any(Auction.class))).thenAnswer(invocation -> invocation.getArgument(0));
+
         when(bidRepository.save(any(BidTransaction.class))).thenAnswer(invocation -> invocation.getArgument(0));
-<<<<<<< Updated upstream
-=======
         when(autoBidRepository.findByAuctionIdAndActiveTrueOrderByMaxAmountDescCreatedAtAsc(auctionId))
-                .thenReturn(Collections.emptyList());
->>>>>>> Stashed changes
+                .thenReturn(List.of());
 
         int threadCount = 3;
         ExecutorService executor = Executors.newFixedThreadPool(threadCount);
-        try {
-            CountDownLatch ready = new CountDownLatch(threadCount);
-            CountDownLatch start = new CountDownLatch(1);
+        CountDownLatch ready = new CountDownLatch(threadCount);
+        CountDownLatch start = new CountDownLatch(1);
 
-            List<Exception> errors = new ArrayList<>();
+        List<Exception> errors = new ArrayList<>();
 
-            double[] bids = {11.0, 12.0, 13.0};
+        double[] bids = {11.0, 12.0, 13.0};
 
-<<<<<<< Updated upstream
         for (double bidAmount : bids) {
             executor.submit(() -> {
                 ready.countDown();
+                start.await();
+
                 try {
-                    start.await();
                     bidService.placeBid(auctionId, UUID.randomUUID(), bidAmount);
                 } catch (Exception e) {
                     synchronized (errors) {
                         errors.add(e);
                     }
                 }
+
                 return null;
             });
         }
 
-        // wait for threads to be ready and then start them simultaneously
-        assertTrue(ready.await(3, TimeUnit.SECONDS));
+        ready.await(3, TimeUnit.SECONDS);
         start.countDown();
 
         executor.shutdown();
-        boolean finished = executor.awaitTermination(10, TimeUnit.SECONDS);
+        boolean finished = executor.awaitTermination(5, TimeUnit.SECONDS);
 
-        assertTrue(finished, "Executor did not finish in time");
-        // final price should be the highest bid attempted
+        assertTrue(finished);
         assertEquals(13.0, auction.getCurrentPrice());
         assertNotNull(auction.getLeaderId());
-        // at most two threads may fail (others succeed)
         assertTrue(errors.size() <= 2);
         verify(bidRepository, atLeastOnce()).save(any(BidTransaction.class));
-=======
-            for (double bidAmount : bids) {
-                executor.submit(() -> {
-                    ready.countDown();
-                    try {
-                        // ensure all threads start together
-                        start.await();
-                        bidService.placeBid(auctionId, UUID.randomUUID(), bidAmount);
-                    } catch (Exception e) {
-                        synchronized (errors) {
-                            errors.add(e);
-                        }
-                    }
-                    return null;
-                });
-            }
-
-            // ensure all threads are ready
-            assertTrue(ready.await(3, TimeUnit.SECONDS), "threads didn't become ready in time");
-            start.countDown();
-
-            executor.shutdown();
-            boolean finished = executor.awaitTermination(10, TimeUnit.SECONDS);
-
-            assertTrue(finished, "executor did not finish in time");
-            assertEquals(13.0, auction.getCurrentPrice(), 0.0001);
-            assertNotNull(auction.getLeaderId());
-            assertTrue(errors.size() <= 2);
-            verify(bidRepository, atLeastOnce()).save(any(BidTransaction.class));
-        } finally {
-            if (!executor.isShutdown()) {
-                executor.shutdownNow();
-            }
-        }
->>>>>>> Stashed changes
     }
-
     @Test
     void placeBid_nearEndTime_extendsAuction() {
         UUID auctionId = UUID.randomUUID();
@@ -299,19 +227,18 @@ class BidServiceImplTest {
         auction.setState(AuctionState.ACTIVE);
         auction.setCurrentPrice(10.0);
 
-        when(auctionRepository.findById(auctionId)).thenReturn(Optional.of(auction));
+        when(auctionRepository.findByIdForUpdate(auctionId)).thenReturn(Optional.of(auction));
         when(auctionRepository.save(any(Auction.class))).thenAnswer(i -> i.getArgument(0));
         when(bidRepository.save(any(BidTransaction.class))).thenAnswer(i -> i.getArgument(0));
-<<<<<<< Updated upstream
-=======
         when(autoBidRepository.findByAuctionIdAndActiveTrueOrderByMaxAmountDescCreatedAtAsc(auctionId))
-                .thenReturn(Collections.emptyList());
->>>>>>> Stashed changes
+                .thenReturn(List.of());
 
         bidService.placeBid(auctionId, bidderId, 12.0);
 
         assertTrue(auction.getEndTime().isAfter(originalEndTime));
-        assertEquals(12.0, auction.getCurrentPrice(), 0.0001);
+        assertEquals(12.0, auction.getCurrentPrice());
         assertEquals(bidderId, auction.getLeaderId());
     }
+
+
 }
